feat: Migrated to Spring Boot 4